--- a/views/index.html
+++ b/views/index.html
@@ -10,9 +10,9 @@
 <body>
     <header><h1>Vitalik</h1></header>
 <div id="buttons">
-<a href="/about.html"><button>About</button></a>
-<a href="/work.html"><button>Work</button></a>
-<a href="/gallery.html"><button>Gallery</button></a>
+<a href="/about"><button>About</button></a>
+<a href="/work"><button>Work</button></a>
+<a href="/gallery"><button>Gallery</button></a>
 
 <img id ="image-1" src="./images/Buterin-_-LEAF.webp" alt="">
 
